# FastNN

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml  CI.yml
src/: CMakeLists.txt  main.cpp
src/Activations/: CMakeLists.txt  LeakyReLU.cpp  LeakyReLU.h  Linear.cpp  Linear.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h  Tanh.cpp  Tanh.h
src/Activations/activations/: ReLU.h  Sigmoid.h  Tanh.h
src/App/: CMakeLists.txt  main.cpp
src/Core/: Activation.h  BackwardLayer.cpp  BackwardLayer.h  CMakeLists.txt  Cost.h  ForwardLayer.cpp  ForwardLayer.h  HiddenLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  Network.cpp  Network.h  OutputLayer.cpp  OutputLayer.h
src/Core/core/: Layer.h
src/Costs/: CMakeLists.txt  HalfSquaredError.cpp  HalfSquaredError.h  MeanSqaured.cpp  MeanSqaured.h  MeanSquareError.cpp  MeanSquareError.h  MeanSquaredError.cpp  MeanSquaredError.h  RootMeanSquareError.cpp  RootMeanSquareError.h  RootSquaredError.cpp  RootSquaredError.h  SquaredError.cpp  SquaredError.h
src/Math/: CMakeLists.txt  Matrix.cpp  Matrix.h  NumericFunction.cpp  NumericFunction.h  Random.cpp  Random.h
src/Math/math/: Matrix.cpp
src/activations/: LeakyReLU.h  Linear.h  ReLU.h  Sigmoid.h  Softmax.h  Tanh.h
src/core/: Activation.h  Layer.cpp  Layer.h  Network.h  Neuron.h
src/math/: Matrix.cpp  Matrix.h  NumericFunction.cpp  NumericFunction.h
